# scenario-execution

./: .dockerignore  .gitignore  CITATION.cff  Makefile  README.md  deb_requirements.txt
.devcontainer/: Dockerfile
.github/: pull_request_template.md
.github/workflows/: Dockerfile.production  Dockerfile.testing  cleanup_pr_images.yml  codeql.yml  image.yml  scan.yml  scorecard.yml  test_build.yml
docs/: architecture.rst  conf.py  development.rst  dictionary.txt  how_to_run.rst  libraries.rst  openscenarioDSL.rst  setup.rst  tutorials.rst
examples/example_external_method/: README.md  setup.py
examples/example_library/: README.md  setup.py
examples/example_moveit2/: README.md
examples/example_multi_robot/: README.md  package.xml  setup.py
examples/example_nav2/: README.md  package.xml  setup.py
examples/example_ros_examples/: README.md  test_service.osc  test_subscriber.osc
examples/example_scenario/: README.md
examples/example_scenario_control/: README.md  package.xml  setup.py
examples/example_scenario_variation/: README.md
examples/example_simulation/: README.md  package.xml  setup.py
libs/scenario_execution_dataops/: CHANGELOG.rst  MANIFEST.in  README.md  package.xml  setup.cfg  setup.py
libs/scenario_execution_docker/: package.xml  setup.py
libs/scenario_execution_floorplan_dsl/: package.xml  setup.py
libs/scenario_execution_gazebo/: CHANGELOG.rst  package.xml  setup.py
libs/scenario_execution_kubernetes/: package.xml  setup.py
libs/scenario_execution_moveit2/: package.xml  setup.py
libs/scenario_execution_nav2/: CHANGELOG.rst  package.xml  setup.py
scenario_execution/: CHANGELOG.rst  MANIFEST.in  package.xml  pypi_release.sh  setup.py
scenario_execution_control/: CHANGELOG.rst  package.xml  setup.py
scenario_execution_coverage/: CHANGELOG.rst  package.xml  setup.py
scenario_execution_interfaces/: CHANGELOG.rst  package.xml
scenario_execution_ros/: CHANGELOG.rst  package.xml  setup.py
scenario_execution_rviz/: CHANGELOG.rst  CMakeLists.txt  package.xml
scenario_execution_rviz/src/: control_panel.cpp  scenario_view.cpp  scenario_view.h
tools/: set_version.py
tools/scenario_status/: setup.py  (+1 more)
(+275 files in other folders)
